<resources>
    <string name="app_name">Raider</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="flex_title">Flex Zone</string>
    <string name="sporting_title">Sporting Events</string>
    <string name="scout_title">Scout</string>
    <string name="custom_submit_button">Submit</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="area_text">Address</string>
    <string name="backetball_title">Basketball</string>
    <string name="soccer_title">Soccer</string>
    <string name="other_title">Other</string>
    <string name="fee_title">Partication Fee</string>
    <string name="event_title">Event Name</string>
    <string name="match_title">Match</string>
    <string name="type_title">Type</string>
    <string name="back_title">Back</string>
    <string name="merchandise_title">Merchandise</string>


    <string-array name="event_options">
        <item>Basketball</item>
        <item>Soccer</item>
        <item>Other</item>
    </string-array>

    <string-array name="backetball_options">

        <item> 1 On 1</item>
        <item>2 On 2</item>
        <item>3 On 3</item>
        <item>Normal Tournament</item>
        <item>League</item>
    </string-array>

    <string-array name="soccer_options">
        <item>1 On 1</item>
        <item>2 Aside</item>
        <item>3 Aside</item>
        <item>3 Aside</item>
        <item>4 Aside</item>
        <item>5 Aside</item>
        <item>6 Aside</item>
        <item>7 Aside</item>
        <item>Normal Tournament</item>
        <item>League</item>
    </string-array>

    <string-array name="merchandise_options">
        <item>Beverages</item>
        <item>Gym Gear</item>
        <item>Gym Equipment</item>
    </string-array>

    <string name="beverages_title">Beverages</string>
    <string name="gym_gear_title">Gym Gear</string>
    <string name="gym_equipment">Gym Equipment</string>
    <string name="create_sporting_event">Create Sporting Events</string>
    <string name="view_sporting_event">View Sporting Events</string>
    <string name="create_beverages_title">Create Beverage</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="login_button_label">Login In</string>

    <string name="log_out_title">Log Out</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
</resources>
