<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_beverages"
        android:orderInCategory="100"
        android:title="@string/back_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gym_gear"
        android:orderInCategory="101"
        android:title="@string/gym_gear_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gym_equipment"
        android:orderInCategory="102"
        android:title="@string/gym_equipment"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_back"
        android:orderInCategory="104"
        android:title="@string/back_title"
        app:showAsAction="never" />

</menu>