<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="raiderzfit.co.za.raider.CreateSportingEventActivity"
    android:background="#FFFF">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/event_title"
            android:ems="10"
            android:id="@+id/etEventName"
            android:layout_marginBottom="@dimen/spacing_bottom1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/spacing_bottom1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/type_title"
                android:id="@+id/textView"
                android:layout_weight="0.5"/>


            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spType"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"/>



        </LinearLayout>




            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEventArea"
                android:inputType="textMultiLine"
                android:layout_marginLeft="5dp"
                android:hint="@string/area_text"
                android:layout_marginBottom="@dimen/spacing_bottom1"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etEventFee"
            android:inputType="numberDecimal"
            android:layout_marginLeft="5dp"
            android:hint="@string/fee_title"
            android:layout_marginBottom="@dimen/spacing_bottom1"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginBottom="@dimen/spacing_bottom1"
            android:id="@+id/llMatch">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/match_title"
                android:id="@+id/textView1"
                android:layout_weight="0.5"/>


            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spMatch"
                android:layout_weight="1.5"
                android:layout_marginLeft="5dp"/>



        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Poster:"
            android:id="@+id/textView2"
            android:layout_marginBottom="@dimen/spacing_bottom1"/>

        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/ivCreateEvent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:src="@drawable/upload"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_submit_button"
            android:id="@+id/btnSubmit"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttonshape"
            android:elevation="@dimen/button_elevation"
            android:enabled="false" />


    </LinearLayout>

</ScrollView>
